# test_robot

./: README.md
.github/workflows/: main.yml
tr_ws/: setup.sh
tr_ws/src/tr_bar_pipeline/: CMakeLists.txt  package.xml
tr_ws/src/tr_bar_pipeline/src/: bar_pipeline_component_one.cpp  bar_pipeline_component_three.cpp  bar_pipeline_component_two.cpp
tr_ws/src/tr_circle_approach/: CMakeLists.txt  package.xml
tr_ws/src/tr_circle_approach/src/: circle_detector.cpp  circle_pose_estimator.cpp
tr_ws/src/tr_controls/tr_gazebo_controller/: package.xml  setup.cfg  setup.py
tr_ws/src/tr_controls/tr_gazebo_controller/launch/: tr_gazebo_controller.launch.py
tr_ws/src/tr_controls/tr_gazebo_controller/tr_gazebo_controller/: gazebo_controller.py
tr_ws/src/tr_drivers/tr_camera_driver/: CMakeLists.txt  package.xml
tr_ws/src/tr_drivers/tr_camera_driver/config/: camera.yaml
tr_ws/src/tr_drivers/tr_camera_driver/launch/: tr_camera_driver.launch.py
tr_ws/src/tr_drivers/tr_imu_driver/: CMakeLists.txt  package.xml
tr_ws/src/tr_drivers/tr_imu_driver/launch/: tr_imu_driver.launch.py
tr_ws/src/tr_gazebo/: CMakeLists.txt  package.xml
tr_ws/src/tr_gazebo/launch/: tr_gazebo.launch.py
tr_ws/src/tr_gazebo/worlds/: sub_and_ball.world
tr_ws/src/tr_pipeline_interfaces/: CMakeLists.txt  package.xml
tr_ws/src/tr_pipeline_interfaces/msg/: PipelineType.msg
tr_ws/src/tr_pipeline_manager/: package.xml  setup.cfg  setup.py
tr_ws/src/tr_pipeline_manager/config/: bar.yaml
tr_ws/src/tr_pipeline_manager/launch/: tr_pipeline.launch.py
tr_ws/src/tr_pipeline_manager/tr_pipeline_manager/: pipeline_manager.py
